# Fantasy

./: Cargo.toml  README.md  build.rs
assets/: world.ldtk
src/: assets.rs  game.rs  incl.rs  input.rs  main.rs  startup.rs  state.rs
src/assets/: asset.rs  mod.rs
src/core/: control.rs  input.rs  ldtk.rs  mod.rs  state.rs
src/ents/: mod.rs  player.rs
src/logic/: control.rs  mod.rs
src/logic/ents/: mod.rs  player.rs
src/ui/: func.rs  menu.rs  mod.rs
src/ui/comp/: interact.rs  mod.rs
src/ui/frag/: menu.rs  mod.rs
